# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elody"
version = "0.0.214"
description = "elody SDK for Python"
readme = "README.md"
authors = [{ name = "Inuits", email = "developers@inuits.eu" }]
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
keywords = ["elody", "SDK"]
dependencies = [
  "certifi>=2023.5.7",
  "charset-normalizer>=3.2.0",
  "idna>=3.4",
  "requests>=2.31.0",
  "urllib3>=1.26.16",
]

[project.optional-dependencies]
loader = [
  "APScheduler>=3.10.4",
  "cloudevents>=1.9.0",
  "inuits-policy-based-auth>=10.0.1",
  "jsonschema>=4.23.0",
  "pytz>=2024.1",
  "six>=1.16.0",
  "tzlocal>=5.2",
]
util = [
  "cloudevents>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/inuits/elody-python-sdk"
